<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/charFragmentColor"
    tools:context=".presentation.fragments.characters.CharactersFragment"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/search_tv"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/search_background"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="100dp"
        android:textSize="15sp"
        android:hint="@string/searchEt_hint"
        android:padding="10dp"
        android:inputType="textCapSentences"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/search_tv"
        app:layout_constraintBottom_toBottomOf="@id/search_tv"
        app:layout_constraintEnd_toEndOf="@id/search_tv"
        android:background="@color/search_background"
        android:layout_marginEnd="10dp"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search_tv"
        app:layout_constraintBottom_toBottomOf="@id/search_tv"
        android:text="@string/btn_next"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="100dp"
        android:text="@string/btn_search"/>

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="100dp"
        app:layout_constraintTop_toBottomOf="@id/search_tv"
        android:text="@string/btn_filter"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/charRv"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/btnSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>